--- a/popup.html
+++ b/popup.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <link href="popup.css" rel="stylesheet"/>
+    <script defer type="module" src="popup.js"></script>
     <title>Microsoft Learn Language Selector</title>
 </head>
 <body>
 <button id="en-us" type="button">English</button>
 <button id="pt-br" type="button">Português</button>
-<script src="popup.js"></script>
 </body>
 </html>
