--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -7,7 +7,11 @@
     <title>Microsoft Learn Language Selector</title>
 </head>
 <body>
-<button id="en-us" type="button">English</button>
-<button id="pt-br" type="button">Português</button>
+<img src="../icons/icon.svg" alt="icon image">
+<span class="text">Language Selector</span>
+<div id="button-container">
+    <button id="en-us" type="button">English</button>
+    <button id="pt-br" type="button">Português</button>
+</div>
 </body>
 </html>
