feat!: update extension logic to be more site agnostic, allowing for multiples websites implementations

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -7,11 +7,8 @@
     <title>Microsoft Learn Language Selector</title>
 </head>
 <body>
-<img src="../icons/icon.svg" alt="icon image">
+<img src="../icons/icon.png" alt="icon image">
 <span class="text">Language Selector</span>
-<div id="button-container">
-    <button id="en-us" type="button">English</button>
-    <button id="pt-br" type="button">Português</button>
-</div>
+<div id="button-container"></div>
 </body>
 </html>
